--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
             </p>
             <a href="">Start now</a>
           </div>
-          <img src="./img/img__1.svg" alt="" width="700" height="700" />
+          <img src="./img/img__1.svg" alt="" width="50%" />
         </div>
       </div>
       <div class="container">
         <div class="section4">
-          <img src="./img/img__2.svg" alt="" width="700" height="700" />
+          <img src="./img/img__2.svg" alt="" width="50%" />
           <div class="section4-block">
             <h2>Shorten time to market</h2>
             <p>
@@ -105,12 +105,12 @@
             </p>
             <a href="">Start now</a>
           </div>
-          <img src="./img/img__3.svg" alt="" width="700" height="700" />
+          <img src="./img/img__3.svg" alt="" width="50%" />
         </div>
       </div>
       <div class="container">
         <div class="section6">
-          <img src="./img/img__4.svg" alt="" width="700" height="700" />
+          <img src="./img/img__4.svg" alt="" width="50%" />
           <div class="section6-block">
             <h2>Less work for developers</h2>
             <p>
@@ -127,7 +127,7 @@
           <h2>What can you localize with Lokalise?</h2>
           <div class="wrapper-items">
             <div class="sm-cont1">
-              <img src="./img/img1.svg" alt="" />
+              <img src="./img/img1.svg" alt="" width="50%" />
               <h3>Web apps</h3>
               <p>
                 Any kind of web apps — backend, frontend, single page, blogs —
@@ -135,7 +135,7 @@
               </p>
             </div>
             <div class="sm-cont1">
-              <img src="./img/img2.svg" alt="" />
+              <img src="./img/img2.svg" alt="" width="50%" />
               <h3>Mobile apps</h3>
               <p>
                 Upload any mobile platform language files. Embed Lokalise iOS
@@ -143,7 +143,7 @@
               </p>
             </div>
             <div class="sm-cont1">
-              <img src="./img/img3.svg" alt="" />
+              <img src="./img/img3.svg" alt="" width="50%" />
               <h3>Games</h3>
               <p>
                 Our cloud software is trusted by many leading game developers
@@ -153,12 +153,12 @@
           </div>
           <div class="wrapper-items2">
             <div class="sm-cont1">
-              <img src="./img/img4.svg" alt="" />
+              <img src="./img/img4.svg" alt="" width="50%" />
               <h3>Documents</h3>
               <p>Upload your DOCX and static HTML files.</p>
             </div>
             <div class="sm-cont1">
-              <img src="./img/img5.svg" alt="" />
+              <img src="./img/img5.svg" alt="" width="50%" />
               <h3>Marketing e-mails</h3>
               <p>
                 Integrate with Salesforce Marketing Cloud (coming soon) or
@@ -166,7 +166,7 @@
               </p>
             </div>
             <div class="sm-cont1">
-              <img src="./img/img6.svg" alt="" />
+              <img src="./img/img6.svg" alt="" width="50%" />
               <h3>IoT</h3>
               <p>We support most popular localization file formats.</p>
             </div>
@@ -189,7 +189,7 @@
               <a href="">Learn more</a>
             </div>
             <div class="sm-cont2">
-              <img src="./img/img_2.svg" alt="" height="200" />
+              <img src="./img/img_2.svg" alt="" width="50%" />
               <h3>Developers</h3>
               <p>
                 Set up an integration with your code repository or your own
@@ -200,7 +200,7 @@
               <a href="">Learn more</a>
             </div>
             <div class="sm-cont2">
-              <img src="./img/img_3.svg" alt="" height="200" />
+              <img src="./img/img_3.svg" alt="" width="50%" />
               <h3>Translators</h3>
               <p>
                 Eliminate double-work and neverending revisions with visual
