--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div>
             <img src="./img/logo.svg" alt="logo" />
           </div>
-          <nav class="navbar">
+          <nav>
             <a href="#product">Product</a>
             <a href="#features">Features</a>
             <a href="">Pricing</a>
@@ -24,6 +24,15 @@
             <button class="outline">Log in</button>
             <button class="solid">Try it free</button>
           </div>
+          <input type="checkbox" id="burger-checkbox" class="burger-checkbox" />
+          <label for="burger-checkbox" class="burger"></label>
+          <ul class="menu-list">
+            <li><a href="#product" class="menu-item">Product</a></li>
+            <li><a href="#features" class="menu-item">Features</a></li>
+            <li><a href="#" class="menu-item">Pricing</a></li>
+            <li><a href="#" class="menu-item">Case studies</a></li>
+            <li><a href="#" class="menu-item">Resources</a></li>
+          </ul>
         </div>
       </div>
     </header>
