--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <span>Edward Cooper, Chief Mobile Officer</span>
               <img src="./img/revolut.svg" alt="" width="115" />
             </div>
-            <img src="./img/man.png" alt="" height="310" width="310" />
+            <img class="s9-img" src="./img/man.png" alt="" />
           </div>
         </div>
       </div>
@@ -259,8 +259,8 @@
             <img src="./img/cake.svg" alt="" height="154" width="176" />
             <h2>The most-loved translation management software</h2>
             <div class="captera">
-              <img src="./img/g2.svg" alt="" width="100%" />
-              <img src="./img/captera.svg" alt="" width="100%" />
+              <img class="captera-img" src="./img/g2.svg" alt="" />
+              <img class="captera-img" src="./img/captera.svg" alt="" />
             </div>
           </div>
         </div>
@@ -290,7 +290,7 @@
       <div class="container2">
         <div class="div1">
           <h2>Case Studies</h2>
-          <img src="./img/Rectangle.png " alt="" />
+          <img class="div1-img" src="./img/Rectangle.png " alt="" />
           <img src="./img/company1.svg" alt="" width="80" height="32" />
           <p>Riding towards global success with a 100% teammate enthusiasm</p>
           <a href="">Read More</a>
